# SeekPassion

./: .gitignore  CLAUDE.md  Makefile  README.md  config.yaml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
apps/api/: pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_schema.py
apps/api/src/seekpassion_api/: config.py  db.py  main.py  models.py  schemas.py  seed.py
apps/api/src/seekpassion_api/routes/: companies.py
apps/api/tests/: conftest.py  test_companies.py  test_cors.py
apps/web/app/: page.tsx
apps/web/app/companies/: page.tsx
apps/web/lib/: api.ts
docs/: CLAUDE.md  DESIGN.md  PRD.md  design.md  requirements.md
resume/: pool.yaml  static.yaml
seekpassion/: config.py  main.py
seekpassion/db/: models.py  session.py
seekpassion/discovery/: base.py  company_board.py  deduplicator.py  filters.py
seekpassion/evaluation/: jd_parser.py  matcher.py  profile.py  ranker.py  success.py
tests/: test_config.py  test_discovery.py  test_evaluation.py
tests/fixtures/: pool.yaml  static.yaml
