[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "seekpassion"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "ruamel.yaml>=0.18",
    "beautifulsoup4>=4.12",
    "rich>=13.0",
]

[project.scripts]
sp = "seekpassion.main:cli"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "black>=24.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-beautifulsoup4",
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
